# milhouse

./: .gitignore  README.md  REBUILD_PLAN.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: configure-claude.ts  embeddings.ts  index.ts  indexer.ts  store.ts
src/: App.tsx  App.tsx.tmp.41614.1768412337961
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  drawer.rs  files.rs  lib.rs  mcp.rs  terminal.rs
src/components/: DocsList.tsx  Drawer.tsx  FileTree.tsx  TaskList.tsx  Terminal.tsx
src/hooks/: useClaude.ts  useMcp.ts  useProject.ts
src/styles/: globals.css
