[package]
name = "milhouse"
version = "0.2.1"
description = "Lightweight IDE for Claude Code"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
dirs = "6.0"
portable-pty = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
